objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <fields>
        <fullName>FinServ__OutgoingVolume__c</fullName>
        <description>The volume of transactions going out through the service.</description>
        <label>Outgoing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverdraftAllowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftLinkedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overdraft/Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts (Overdraft Linked Account)</relationshipLabel>
        <relationshipName>FinancialAccount_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftProtection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the customer accepts overdraft protection and its associated fees.</description>
        <label>Overdraft Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__OwnerType__c</fullName>
        <label>Owner Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PaperlessDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deliver documents electronically.</description>
        <label>Paperless Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentFrequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>BI-ANNUAL</fullName>
                    <isActive>false</isActive>
                    <label>BI-ANNUAL</label>
                </value>
                <value>
                    <fullName>BiAnnually</fullName>
                    <label>Bi-Annually</label>
                </value>
                <value>
                    <fullName>BIWEEKLY</fullName>
                    <isActive>false</isActive>
                    <label>BIWEEKLY</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Quaterly</fullName>
                    <isActive>false</isActive>
                    <label>Quaterly</label>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                    <isActive>false</isActive>
                    <label>Semiannual</label>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>SINGLE CONTRIBU</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                    <isActive>false</isActive>
                    <label>UNKNOWN</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>YEARLY</fullName>
                    <isActive>false</isActive>
                    <label>YEARLY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PendingDeposits__c</fullName>
        <label>Pending Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PendingWithdrawals__c</fullName>
        <label>Pending Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance1Yr__c</fullName>
        <label>Performance 1Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance3Yr__c</fullName>
        <label>Performance 3Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceMTD__c</fullName>
        <label>Performance MTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceQTD__c</fullName>
        <label>Performance QTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceYTD__c</fullName>
        <label>Performance YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PolicyTerm__c</fullName>
        <description>Length of time the policyholder pays an insurance premium.</description>
        <label>Policy Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PostalCode__c</fullName>
        <description>Postal code for mailing address.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Primary Owner</relationshipLabel>
        <relationshipName>ClientFinancialAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PrincipalBalance__c</fullName>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance policy product name.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Account Products</relationshipLabel>
        <relationshipName>FinancialAccountProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RebalanceFrequency__c</fullName>
        <label>Rebalance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__RepaymentPeriodMonths__c</fullName>
        <label>Repayment Period(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RoutingNumber__c</fullName>
        <label>RoutingNumber</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceProvider__c</fullName>
        <description>Custodian or recordkeeper of this financial account.</description>
        <label>Service Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceType__c</fullName>
        <description>The type of service undertaken.</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Lockbox</fullName>
                </value>
                <value>
                    <fullName>Positive Pay</fullName>
                </value>
                <value>
                    <fullName>Business Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Account Analysis</fullName>
                </value>
                <value>
                    <fullName>Remote Deposit Capture</fullName>
                </value>
                <value>
                    <fullName>Purchase Cards</fullName>
                </value>
                <value>
                    <fullName>Credit Cards</fullName>
                </value>
                <value>
                    <fullName>Zero Balance Account</fullName>
                </value>
                <value>
                    <fullName>Bill Presentment</fullName>
                </value>
                <value>
                    <fullName>Controlled Disbursement</fullName>
                </value>
                <value>
                    <fullName>Sweep to Repo</fullName>
                </value>
                <value>
                    <fullName>Sweep to Line</fullName>
                </value>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Cheque / Current Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Business Account</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Vehicle Finance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Approval/Loan committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Escheat</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Charged off</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Setup Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__State__c</fullName>
        <description>State for mailing address.</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StatementFrequency__c</fullName>
        <label>Statement Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IN FORCE</fullName>
                    <label>In Force</label>
                </value>
                <value>
                    <fullName>UNISSUED</fullName>
                    <label>Unissued</label>
                </value>
                <value>
                    <fullName>NOT TAKEN UP</fullName>
                    <label>Not Taken Up</label>
                </value>
                <value>
                    <fullName>SETTLEMENT PENDING</fullName>
                    <label>Settlement Pending</label>
                </value>
                <value>
                    <fullName>SUSPENSE</fullName>
                    <label>Suspense</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>OUT OF FORCE</fullName>
                    <label>Out of Force</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TargetLimit__c</fullName>
        <description>The limit on items or value that the service will process.</description>
        <label>Target Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxID__c</fullName>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Nonqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TotalCreditLimit__c</fullName>
        <label>Total Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family home</fullName>
                </value>
                <value>
                    <fullName>Town home</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>CISCA Money Market Unit Trust</fullName>
                </value>
                <value>
                    <fullName>CISCA Multi-Manager Fund (Parent)</fullName>
                </value>
                <value>
                    <fullName>CISCA Unit Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Exchange Traded Fund (ETF)</fullName>
                </value>
                <value>
                    <fullName>Fund of Funds</fullName>
                </value>
                <value>
                    <fullName>Kenya Segregated</fullName>
                </value>
                <value>
                    <fullName>Multi Manager</fullName>
                </value>
                <value>
                    <fullName>Multi-Counsellor Fund (Parent)</fullName>
                </value>
                <value>
                    <fullName>Non Pricing</fullName>
                </value>
                <value>
                    <fullName>Pooled Portfolios</fullName>
                </value>
                <value>
                    <fullName>Pooled Underlying Fund</fullName>
                </value>
                <value>
                    <fullName>Segregated</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>STOUT</fullName>
                </value>
                <value>
                    <fullName>Sub-Manager Fund (Child)</fullName>
                </value>
                <value>
                    <fullName>Test Fund</fullName>
                </value>
                <value>
                    <fullName>Uganda Segregated</fullName>
                </value>
                <value>
                    <fullName>Unclaimed Scrip</fullName>
                </value>
                <value>
                    <fullName>Unitised Pooled Fund</fullName>
                </value>
                <value>
                    <fullName>White Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_ActiveConsultantCount__c</fullName>
        <description>Indicates the total number of active consultants associated with financial account.</description>
        <label>Active Consultant Count</label>
        <summaryFilterItems>
            <field>FinServ__FinancialAccountRole__c.SC_ConsultantStatus__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>FinServ__FinancialAccountRole__c.FinServ__FinancialAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantStatus__c</fullName>
        <description>Indicates whether the financial account is Intermediated or orphan</description>
        <formula>(IF(
SC_ActiveConsultantCount__c &gt; 0,
&apos;Intermediated&apos;,
&apos;Orphan&apos;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_BankName__c</fullName>
        <description>Name of the financial institution where the account is held</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_BranchCode__c</fullName>
        <description>Branch code where the account is held</description>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_InceptionDate__c</fullName>
        <description>The start date of the client&apos;s investment account</description>
        <label>Inception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLI_AccountNumberCash__c</fullName>
        <description>Account number for Cash bank account</description>
        <label>Account Number Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_AccountNumberClientWithdrawal__c</fullName>
        <description>Account Number for Client Withdrawal bank account</description>
        <label>Account Number Client Withdrawal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_AccountNumberScrip__c</fullName>
        <description>Number for Scrip bank account</description>
        <label>Account Number Scrip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_AccountStatus__c</fullName>
        <description>Capture Account Status for Institutional accounts</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_BankNameCash__c</fullName>
        <description>Bank name of cash bank account</description>
        <label>Bank Name Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_BankNameClientWithdrawal__c</fullName>
        <description>Name for Client Withdrawal bank account</description>
        <label>Bank Name Client Withdrawal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_BankNameScrip__c</fullName>
        <description>Scrip Bank Name</description>
        <label>Bank Name Scrip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_BaseCountry__c</fullName>
        <label>Base Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_BranchCodeCash__c</fullName>
        <description>Branch code of cash account</description>
        <label>Branch Code Cash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_BranchCodeClientWithdrawal__c</fullName>
        <description>Branch code for Client Withdrawal Bank Account.</description>
        <label>Branch Code Client Withdrawal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_BranchCodeScrip__c</fullName>
        <description>Branch Code for Scrip Bank Account</description>
        <label>Branch Code Scrip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_Capability__c</fullName>
        <description>Capability offered within the STANLIB Franchise</description>
        <label>Capability</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SLI_Franchise__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Money Market</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>ILB</fullName>
                </value>
                <value>
                    <fullName>TAA</fullName>
                </value>
                <value>
                    <fullName>LDI</fullName>
                </value>
                <value>
                    <fullName>Global Property</fullName>
                </value>
                <value>
                    <fullName>Local Property</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Absolute Plus</fullName>
                </value>
                <value>
                    <fullName>Multi-Strategy</fullName>
                </value>
                <value>
                    <fullName>Diversified Credit</fullName>
                </value>
                <value>
                    <fullName>Khanyisa Impact Investment Fund</fullName>
                </value>
                <value>
                    <fullName>Pan Africa Credit</fullName>
                </value>
                <value>
                    <fullName>Fund 1</fullName>
                </value>
                <value>
                    <fullName>Fund of Funds</fullName>
                </value>
                <value>
                    <fullName>Index strategies</fullName>
                </value>
                <value>
                    <fullName>Factor strategies</fullName>
                </value>
                <value>
                    <fullName>Enhanced Index strategies</fullName>
                </value>
                <value>
                    <fullName>Multi-manager solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_CashReconInterval__c</fullName>
        <description>The frequency in which the Cash reconciliation against the bank account is taking place</description>
        <label>Cash Recon Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_FiveYearBenchmarkPerformance__c</fullName>
        <description>Five year performance of the mandated benchmark</description>
        <label>Five Year Benchmark Performance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLI_Franchise__c</fullName>
        <description>Financial Account Franchise</description>
        <label>Franchise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Listed Property</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                    <label>Balanced &amp; Equity</label>
                </value>
                <value>
                    <fullName>Multi-Strategy</fullName>
                </value>
                <value>
                    <fullName>Credit Alternatives</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Systematic Solution</fullName>
                </value>
                <value>
                    <fullName>Multi-Manager</fullName>
                </value>
                <value>
                    <fullName>JP Morgan</fullName>
                </value>
                <value>
                    <fullName>Columbia Threadneedle Investment</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                    <isActive>false</isActive>
                    <label>Index</label>
                </value>
                <value>
                    <fullName>Multi Asset</fullName>
                    <isActive>false</isActive>
                    <label>Multi Asset</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                    <isActive>false</isActive>
                    <label>Offshore</label>
                </value>
                <value>
                    <fullName>Property</fullName>
                    <isActive>false</isActive>
                    <label>Property</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_FundsReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by STANLIB institutional team to confirm when funds have been received against the financial account</description>
        <label>Funds Received</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>